"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2009-08-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-27-netlist-01-10:
	  hacknet: implemented precharge transistors
		added some transistor attributes (keeper, ckeeper, pchg)
		emit precharge transistors with ":pchg" suffix.
	  Basic test cases added.  


2009-08-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-27-netlist-01-09:
	  hacknet: implemented internal node subnets, using on-demand
		creation as each internal node expression is uesd.
	  A few test cases added, including precharge shared-gate XOR.
	  Minor updates to raw_dump for comprehensibility.
	  For now unused internal nodes nets are suppressed.
	  Empty subcircuits are suppressed from output.  


2009-08-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-27-netlist-01-08:
	  hacknet bug fix: was mistakenly using globally assigned 
		instance id to pass to port actuals, when really needed
		local id's, obtained using footprint -> trace_alias.
	  Test cases added, previous ones fixed.


2009-08-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-27-netlist-01-07:
	  hacknet bug fix: port collector was collecting non-port bools.
		Test cases added to prove fix without regression.
	  Added raw-dump debug functions.


2009-08-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-27-netlist-01-06:
	  hacknet: create port summaries and use them in emitting
		instances (x-card).  Tested first hierarchical instances!
	  bool_port_collector: made container-generic, requires ::insert()
	  node::emit(): use canonical alias, updated test case.
	  Next: subcircuits, power supplies, macros.  


2009-08-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-27-netlist-01-05: