@@ -1,5 +1,5 @@
 # "test/net/Makefile.am"
-#	$Id: Makefile.am,v 1.1.2.11 2009/08/17 23:57:20 fang Exp $
+#	$Id: Makefile.am,v 1.1.2.12 2009/08/18 01:18:38 fang Exp $
 # Test auto-Makefile for hacknet.  
 
 include $(top_srcdir)/test/Make.test-head
@@ -18,18 +18,23 @@ HACKNET_TEST_SCRIPTS_PASSES = \
 	internal-00 internal-05 internal-06 internal-07 internal-08 \
 	internal-09 internal-10 \
 	precharge-01 precharge-02 precharge-03 precharge-04 precharge-05 \
-	precharge-internal-01 precharge-internal-02 precharge-internal-03
+	precharge-internal-01 precharge-internal-02 precharge-internal-03 \
+	non-CMOS-01 non-CMOS-02
+
+HACKNET_TEST_SCRIPTS_FAILURES = \
+	non-CMOS-00 non-CMOS-03 non-CMOS-04 non-CMOS-05
+
 # TODO: promote these to real tests
 EXTRA_DIST_HAC = \
 	subckt-01 subckt-02 \
 	internal-01 internal-02 internal-03 internal-04 \
-	non-CMOS-01 non-CMOS-02 non-CMOS-03 \
 	process-port-01 process-port-02
 # internal-01..04 need subcircuits first
 
 EXTRA_DIST += $(EXTRA_DIST_HAC:=.hac)
 
-HACKT_PARSE_TEST_PASSES =
+HACKT_PARSE_TEST_PASSES = \
+	non-CMOS-06
 
 HACKTNET_TEST_SCRIPTS_PASSES =
 
@@ -38,10 +43,9 @@ AUTO_IGNORE +=
 EXTRA_DIST +=
 
 HACKT_CREATE_TEST_PASSES =
-HACKT_CREATE_TEST_FAILURES =
+HACKT_CREATE_TEST_FAILURES = \
+	non-CMOS-06
 HACKT_CFLAT_TEST_SUBJECTS =
-
-HACKNET_TEST_SCRIPTS_FAILURES =
 
 srcdir_EXTRA_DIST +=
 
