@@ -1,0 +1,14 @@
+// "non-CMOS-06.hac"
+// copy-modified from "internal-00.hac"
+// is rejected at create-time
+
+defproc foo(bool en, x, _y) {
+_y @ [autokeeper=0];
+prs {
+	en	-> @a-
+	@a & x	-> _y-		// wrong sense!
+}
+}
+
+foo bar;
+
